# trabalho_ene080

./: .gitIgnore
main/: CMakeLists.txt  contas.c  contas.h  main.c  my_oled.c  my_oled.h  my_rfid.c  my_rfid.h  sensores.c  sensores.h  servidor_http.c  servidor_http.h  utilities.h
main/html/: app.js  app_monit.js  cadastro.html  index.html  monitoramento.html
